@@ -14,6 +14,7 @@ ncmpc 0.16 - not yet released
 * strfsong: support multiple values for a tag
 * screen_browser: different colors for directories and playlists
 * screen_browser: display song duration
+* screen_queue: move ranges with one single "move" command
 
 
 ncmpc 0.15 - 2009-09-24
